[project]
name = "questionarire-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "pypdfium2>=4.30",
    "pillow>=10.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.0",
]
